--- a/miniverse/html/planos.html
+++ b/miniverse/html/planos.html
@@ -9,6 +9,12 @@
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="shortcut icon" type="imagex/png" href="../images/logo_miniverse_minimalista.png" />
+    <!-- Fontes -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Archivo+Black&family=Bungee&family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap"
+        rel="stylesheet">
 
     <!-- Responsividade específica desta página -->
     <style>
@@ -144,12 +150,17 @@
                                     Marcas
                                 </a>
                                 <ul class="dropdown-menu dropmenu-marcas">
-                                    <li><a class="dropdown-item a_li_header" href="/html/produtos.html#marvel">Marvel</a></li>
+                                    <li><a class="dropdown-item a_li_header"
+                                            href="/html/produtos.html#marvel">Marvel</a></li>
                                     <li><a class="dropdown-item a_li_header" href="/html/produtos.html#dc">DC</a></li>
-                                    <li><a class="dropdown-item a_li_header" href="/html/produtos.html#dragonball">Dragon Ball</a></li>
-                                    <li><a class="dropdown-item a_li_header" href="/html/produtos.html#tlou">The Last of Us</a></li>
-                                    <li><a class="dropdown-item a_li_header" href="/html/produtos.html#starwars">Star Wars</a></li>
-                                    <li><a class="dropdown-item a_li_header" href="/html/produtos.html#seresmito">Seres Mitológicos</a></li>
+                                    <li><a class="dropdown-item a_li_header"
+                                            href="/html/produtos.html#dragonball">Dragon Ball</a></li>
+                                    <li><a class="dropdown-item a_li_header" href="/html/produtos.html#tlou">The Last of
+                                            Us</a></li>
+                                    <li><a class="dropdown-item a_li_header" href="/html/produtos.html#starwars">Star
+                                            Wars</a></li>
+                                    <li><a class="dropdown-item a_li_header" href="/html/produtos.html#seresmito">Seres
+                                            Mitológicos</a></li>
                                 </ul>
                             </li>
                         </ul>
@@ -227,7 +238,8 @@
                 <div class="plano-col">
                     <div class="card card_lancamento border-0">
                         <div class="card-body">
-                            <img src="../images/sabresdeluzCruzados_planos.png" class="plano-img" alt="Ícone Mestre Jedi">
+                            <img src="../images/sabresdeluzCruzados_planos.png" class="plano-img"
+                                alt="Ícone Mestre Jedi">
                             <h5 class="card-title">Mestre Jedi</h5>
                             <p class="text_desconto card-text">
                                 Uma miniatura média exclusiva por mês<br>
@@ -266,8 +278,8 @@
             <div class="container py-4 py-md-5 px-4 px-md-3">
                 <div class="row">
                     <div class="col-lg-3 mb-3">
-                        <a class="d-inline-flex align-items-center mb-2 text-decoration-none"
-                            href="/html/index.html" aria-label="Bootstrap">
+                        <a class="d-inline-flex align-items-center mb-2 text-decoration-none" href="/html/index.html"
+                            aria-label="Bootstrap">
                             <img src="../images/logo_miniverse_minimalista.png" height="80" width="80">
                             <span class="fs-5 miniF">Miniverse</span>
                         </a>
